[project]
name = "za-pharma-intelligence"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fastmcp>=2.14.2",
    "httpx[http2]>=0.28.1",
    "lxml>=6.0.2",
    "pandas>=2.3.3",
    "tabulate>=0.9.0",
    "uvicorn>=0.40.0",
]
